--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ html {
 }
 
 body {
-	background-image: url('http://cdn.backgroundhost.com/backgrounds/subtlepatterns/retina_wood.png');
+	background-color: #a9dfe0;
 	font-family: "Bungee", verdana, sans-serif;
 }
 
